# roofer

./: .gitignore  .gitmodules  CMakeLCCViewerQt.inc  CMakeLists.txt  Data.cpp  Data.h  GUI.cpp  GUI.h  README.md  Skeleton.cpp  Skeleton.h  main.cpp  viewer_qt.h
src/: Arrangement.cpp  Arrangement.h  CGALTypes.h  CMakeLists.txt  Data.cpp  Data.h  Definitions.h  Facets.cpp  Facets.h  GUI.cpp  GUI.h  ImportOBJ.h  LinkedList.h  SPQueue.h  Skeleton.cpp  Skeleton.h  SweepLine.cpp  SweepLine.h  main.cpp  viewer_qt.h  viewer_vtk.h
